--- a/pop_os/terminator/.config/terminator/config
+++ b/pop_os/terminator/.config/terminator/config
@@ -1,13 +1,14 @@
 [global_config]
-  title_hide_sizetext = True
   enabled_plugins = LaunchpadBugURLHandler, LaunchpadCodeURLHandler, APTURLHandler, TerminatorThemes
   always_split_with_profile = True
+  title_use_system_font = False
   title_font = Twitter Color Emoji Italic 16
 [keybindings]
   copy = <Primary>c
   paste = <Primary>v
 [profiles]
   [[default]]
+    allow_bold = False
     icon_bell = False
     cursor_shape = underline
     cursor_color = "#729fcf"
@@ -119,12 +120,13 @@
     cursor_shape = underline
     cursor_color = "#20bbfc"
     cursor_color_fg = False
-    font = "Source Code Pro Semibold, Semi-Bold 12"
+    font = Fira Code 12
     foreground_color = "#f1f1f1"
     show_titlebar = False
     scrollbar_position = hidden
     scrollback_infinite = True
     palette = "#212121:#c30771:#10a778:#a89c14:#008ec4:#523c79:#20a5ba:#d9d9d9:#424242:#fb007a:#5fd7af:#f3e430:#20bbfc:#6855de:#4fb8cc:#f1f1f1"
+    use_system_font = False
 [layouts]
   [[default]]
     [[[window0]]]
